# AnimalClassifierAPI

./: LICENSE  README.md  random_forest_model.pkl  requirements  requirements.txt
data/: animals_data.json  response_1743854112479.json
data-service/: README.md  pyproject.toml
data-service/src/py_challenge_data_service/: TrainTestModel.py  app.py  dashboard.py  database.py  labeling_data.py  models.py  utils.py
data-service/src/py_challenge_data_service/model/: random_forest_model.pkl
data-service/src/py_challenge_data_service/routes/: animals.py  get_data_from_database.py  predict.py  retrain.py  store_prediction.py
