[project]
name = "py_challenge"
dynamic = ["version"]
description = "A small Python challenge"
authors = [{ name = "jfaldanam" , email = "jfaldanam@uma.es"}]
license = "MIT"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/jfaldanam/py_challenge"
"Bug Tracker" = "https://github.com/jfaldanam/py_challenge/issues"

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/py_challenge_data_service/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py_challenge_data_service"]